[package]
name = "os"
version = "0.1.0"
edition = "2018"
authors = ["John Mark A. Perocho <per.eight@gmail.com>"]

# Profile for `cargo build`
[profile.dev]
panic = "abort" # Disables stack unwinding on panic

# Profile for `cargo build --release`
[profile.release]
panic = "abort" # Disables stack unwinding on panic

[dependencies]
bootloader = "0.9.8"
